Labatt POCM Deployment to UAT 09.16.2016/objects/Budget_Area__c.object
<CustomObject>
    <fields>
        <fullName>Area_Type__c</fullName>
        <label>Area Type</label>
        <picklist>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Area</label>
        <referenceTo>Budget_Area__c</referenceTo>
        <relationshipLabel>Budget Areas</relationshipLabel>
        <relationshipName>Child_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Budget Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>